tests/dataset/tpc-ds/compiler/pl/q39.error
run: exit status 2
[]
ERROR: /tmp/q39.pl:83: user:main Unknown message: error('expect failed')
